--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "paths": {
             "@api/*": ["./src/api/*"],
             "@components/*": ["./src/components/*"],
+            "@environment/*": ["./src/environment/*"],
             "@hooks/*": ["./src/hooks/*"],
             "@customTypes/*": ["./src/types/*"],
             "@utils/*": ["./src/utils/*"]
